# court-access-ai

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  README_updated.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  dvc.yaml  gpu.Dockerfile  mlflow.Dockerfile  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: settings.local.json
.dvc/: config
.github/workflows/: build.yml  dependencies.yml  deploy.yml  lint.yml  security.yml  sensitivity.yml  test.yml
api/: __init__.py  auth.py  dependencies.py  main.py
api/routes/: admin.py  auth.py  documents.py  forms.py  interpreter.py  realtime.py
api/schemas/: __init__.py  schemas.py
api/tests/: __init__.py  conftest.py  test_auth.py  test_dependencies.py  test_health.py  test_routes.py  test_routes_admin.py  test_routes_auth.py  test_routes_documents.py  test_routes_forms.py  test_routes_interpreter.py  test_routes_realtime.py  test_schemas.py
courtaccess/: __init__.py
courtaccess/core/: __init__.py  classify_document.py  config.py  docx_translation.py  gcs.py  ingest_document.py  legal_review.py  logger.py  ocr_handwritten.py  ocr_printed.py  pdf_utils.py  pii_scrub.py  reconstruct_pdf.py  register_models.py  sensitivity_analysis.py  translation.py  validate_models.py  validation.py
courtaccess/data/: .gitignore  anomaly_report.json  bias_report.json  catalog_metrics.json  form_catalog.json.dvc  preprocess_report.json
courtaccess/forms/: __init__.py  catalog.py  parse_glossary.py  scraper.py
courtaccess/languages/: __init__.py  base.py  portuguese.py  spanish.py
courtaccess/monitoring/: __init__.py  anomaly.py  drift.py
courtaccess/speech/: __init__.py  legal_verifier.py  mt_service.py  session.py  session_recorder.py  transcribe.py  tts.py  turn_taking.py  vad.py
dags/: __init__.py  document_pipeline_dag.py  docx_pipeline_dag.py  form_pretranslation_dag.py  form_scraper_dag.py  gpu_pool.py
dags/tests/: conftest.py  test_document_pipeline_dag.py  test_docx_pipeline_dag.py  (+2 more)
data_pipeline/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
db/: __init__.py  database.py  init-airflow-db.sql  init-mlflow-db.sql  models.py
docs/: TEST_SUMMARY.md  architecture.md  bias_detection_report.md  model_inventory.md
frontend/: .env.example  README.md  check_page.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
models/: llama4-scout-legal-review.dvc  nllb-200-distilled-1.3B-ct2.dvc  piper-tts-en.dvc  piper-tts-es.dvc  piper-tts-pt.dvc  silero-vad-v4.dvc  spacy-en-core-web-lg.dvc  tfdv-baseline-stats.dvc  whisper-large-v3.dvc
scripts/: deploy.sh  docker-entrypoint.sh  model-loader.sh  setup_models.sh
(+174 files in other folders)
