[project]
name = "courtaccess"
version = "0.1.0"
description = "Real-time speech and document translation system for the Massachusetts Trial Court"
requires-python = ">=3.11"
dependencies = [
    # ── Web API ──
    "fastapi[standard]>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0",
    # ── Database ──
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # ── Cloud ──
    "google-cloud-storage>=2.16.0",
    "google-cloud-logging>=3.10.0",
    # ── AI / ML (ARM64-compatible) ──
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0.0",
    "transformers>=4.40.0",
    "groq>=0.9.0",
    # ── PDF / OCR ──
    "pymupdf>=1.23.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    # ── Web scraping ──
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "playwright>=1.40.0",
    # ── Data versioning ──
    "dvc>=3.50.0",
    # ── Utilities ──
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.9.0",
    "psycopg2-binary>=2.9.11",
]

[project.optional-dependencies]
# Installed in Airflow containers only
airflow = [
    "apache-airflow>=3.1.7",
]

# Monitoring tools — only installable on x86_64 (no ARM64 Linux wheels).
# pip will silently skip these on Apple Silicon / ARM64 Docker builds.
# They install normally on GCP x86_64 instances.
monitoring = [
    "tensorflow-data-validation>=1.15.0; platform_machine == 'x86_64'",
    "evidently>=0.4.0; platform_machine == 'x86_64'",
    "mlflow>=2.13.0; platform_machine == 'x86_64'",
]

# Audio device I/O — only for native machines with a microphone
# Not available in headless Docker containers
audio = [
    "pyaudio>=0.2.14",
]

# PyTorch — installed separately per hardware target (see gpu.Dockerfile for CUDA)
torch = [
    "torch>=2.3.0",
]

# Full local development install
dev = [
    "courtaccess[airflow,audio,torch]",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
register-models = "courtaccess.core.register_models:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["courtaccess"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "courtaccess/core/tests",
    "courtaccess/speech/tests",
    "courtaccess/forms/tests",
    "courtaccess/monitoring/tests",
    "api/tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
# Ruff config lives in ruff.toml at root — this entry is intentionally empty.
